fix tab alignment

--- a/src/applications/gi/sass/partials/_gi-search-form.scss
+++ b/src/applications/gi/sass/partials/_gi-search-form.scss
@@ -26,11 +26,10 @@
       position: absolute;
       width: 100%;
       bottom: 0px;
-      .loc-search-btn{
+      .loc-search-btn {
         margin-left: 1rem;
       }
     }
-
 
     .name-search-inputs {
       position: relative;
@@ -70,9 +69,7 @@
 
   .search-tab {
     font-size: 25px;
-    border-radius: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin: 0;
 
     &:focus:not(:focus-visible) {
       outline: none;
@@ -98,8 +95,8 @@
   }
 }
 @media screen and (max-width: $small-screen) {
-  .loc-search-btn{
-  width: 100%;
-  margin-top: 0.53rem
+  .loc-search-btn {
+    width: 100%;
+    margin-top: 0.53rem;
   }
 }
